--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-08 13:34:08.813926\n"
+      "Last run:  2020-10-08 15:06:57.640684\n"
      ]
     }
    ],
@@ -1971,59 +1971,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>WikidataID</th>\n",
+       "      <th>authorid_x</th>\n",
        "      <th>show_y</th>\n",
        "      <th>authorid_y</th>\n",
-       "      <th>authorid_x</th>\n",
-       "      <th>WikidataID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Q100151904</td>\n",
+       "      <td>BjerkenCG</td>\n",
        "      <td>True</td>\n",
        "      <td>BjerkénCG</td>\n",
-       "      <td>BjerkenCG</td>\n",
-       "      <td>Q100151904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Q100153203</td>\n",
+       "      <td>BrandstromKA</td>\n",
        "      <td>True</td>\n",
        "      <td>BrändströmKA</td>\n",
-       "      <td>BrandstromKA</td>\n",
-       "      <td>Q100153203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Q99771903</td>\n",
+       "      <td>DahlenT</td>\n",
        "      <td>True</td>\n",
        "      <td>DahlénT</td>\n",
-       "      <td>DahlenT</td>\n",
-       "      <td>Q99771903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>Q99871759</td>\n",
+       "      <td>FjortoftK</td>\n",
        "      <td>True</td>\n",
        "      <td>FjørtoftK</td>\n",
-       "      <td>FjortoftK</td>\n",
-       "      <td>Q99871759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Q99872638</td>\n",
+       "      <td>ForsasScottH</td>\n",
        "      <td>True</td>\n",
        "      <td>ForsåsScottH</td>\n",
-       "      <td>ForsasScottH</td>\n",
-       "      <td>Q99872638</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   show_y    authorid_y    authorid_x  WikidataID\n",
-       "0    True     BjerkénCG     BjerkenCG  Q100151904\n",
-       "1    True  BrändströmKA  BrandstromKA  Q100153203\n",
-       "2    True       DahlénT       DahlenT   Q99771903\n",
-       "3    True     FjørtoftK     FjortoftK   Q99871759\n",
-       "4    True  ForsåsScottH  ForsasScottH   Q99872638"
+       "   WikidataID    authorid_x  show_y    authorid_y\n",
+       "0  Q100151904     BjerkenCG    True     BjerkénCG\n",
+       "1  Q100153203  BrandstromKA    True  BrändströmKA\n",
+       "2   Q99771903       DahlenT    True       DahlénT\n",
+       "3   Q99871759     FjortoftK    True     FjørtoftK\n",
+       "4   Q99872638  ForsasScottH    True  ForsåsScottH"
       ]
      },
      "execution_count": 33,
@@ -2048,95 +2048,95 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>authorid</th>\n",
-       "      <th>Littbank</th>\n",
        "      <th>WikidataID</th>\n",
+       "      <th>Littbank</th>\n",
+       "      <th>authorid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>191</th>\n",
-       "      <td>BirchPfeifferC</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BirchPfeifferC'>link</a></td>\n",
        "      <td>Q68117</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BirchPfeifferC'>link</a></td>\n",
+       "      <td>BirchPfeifferC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>BjerkenCG</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjerkenCG'>link</a></td>\n",
        "      <td>Q100151904</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjerkenCG'>link</a></td>\n",
+       "      <td>BjerkenCG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>207</th>\n",
-       "      <td>BjörkmanE</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjörkmanE'>link</a></td>\n",
        "      <td>Q11859217</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjörkmanE'>link</a></td>\n",
+       "      <td>BjörkmanE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253</th>\n",
-       "      <td>BrandstromKA</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BrandstromKA'>link</a></td>\n",
        "      <td>Q100153203</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BrandstromKA'>link</a></td>\n",
+       "      <td>BrandstromKA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>300</th>\n",
-       "      <td>ButenschönA</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ButenschönA'>link</a></td>\n",
        "      <td>Q14932468</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ButenschönA'>link</a></td>\n",
+       "      <td>ButenschönA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>387</th>\n",
-       "      <td>DahlenT</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/DahlenT'>link</a></td>\n",
        "      <td>Q99771903</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/DahlenT'>link</a></td>\n",
+       "      <td>DahlenT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>529</th>\n",
-       "      <td>FjortoftK</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/FjortoftK'>link</a></td>\n",
        "      <td>Q99871759</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/FjortoftK'>link</a></td>\n",
+       "      <td>FjortoftK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>541</th>\n",
-       "      <td>ForsasScottH</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ForsasScottH'>link</a></td>\n",
        "      <td>Q99872638</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ForsasScottH'>link</a></td>\n",
+       "      <td>ForsasScottH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>759</th>\n",
-       "      <td>HornströmM</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/HornströmM'>link</a></td>\n",
        "      <td>Q99751230</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/HornströmM'>link</a></td>\n",
+       "      <td>HornströmM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1296</th>\n",
-       "      <td>RomanusAlfvénAC</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/RomanusAlfvénAC'>link</a></td>\n",
        "      <td>Q16946439</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/RomanusAlfvénAC'>link</a></td>\n",
+       "      <td>RomanusAlfvénAC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1411</th>\n",
-       "      <td>SjödinS</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/SjödinS'>link</a></td>\n",
        "      <td>Q3527629</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/SjödinS'>link</a></td>\n",
+       "      <td>SjödinS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1549</th>\n",
-       "      <td>TirénG</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/TirénG'>link</a></td>\n",
        "      <td>Q4458078</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/TirénG'>link</a></td>\n",
+       "      <td>TirénG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1597</th>\n",
-       "      <td>WahlinK</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/WahlinK'>link</a></td>\n",
        "      <td>Q1708942</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/WahlinK'>link</a></td>\n",
+       "      <td>WahlinK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1697</th>\n",
-       "      <td>ÅströmP</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ÅströmP'>link</a></td>\n",
        "      <td>Q2063496</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ÅströmP'>link</a></td>\n",
+       "      <td>ÅströmP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -3209,8 +3209,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-10-08 13:34:14.984800\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:06.171422\n"
+      "Ended:  2020-10-08 15:07:04.322645\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:06.682708\n"
      ]
     }
    ],
