--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-08 20:33:39.873026\n"
+      "Last run:  2020-10-09 00:02:31.271201\n"
      ]
     }
    ],
@@ -966,7 +966,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End run:  2020-10-08 20:33:42.530889\n"
+      "End run:  2020-10-09 00:02:34.074029\n"
      ]
     }
    ],
@@ -983,7 +983,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed (hh:mm:ss.ms) 0:00:02.669362\n"
+      "Time elapsed (hh:mm:ss.ms) 0:00:02.807594\n"
      ]
     }
    ],
@@ -1003,104 +1003,104 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>category</th>\n",
        "      <th>linkjson</th>\n",
-       "      <th>name_en</th>\n",
        "      <th>wd</th>\n",
        "      <th>linkhtml</th>\n",
        "      <th>awardYear</th>\n",
+       "      <th>category</th>\n",
+       "      <th>name_en</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>942</th>\n",
-       "      <td>Economic Sciences</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=984'>json</a></td>\n",
-       "      <td>Michael Kremer</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q1635006'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/984'>html</a></td>\n",
        "      <td>2019</td>\n",
+       "      <td>Economic Sciences</td>\n",
+       "      <td>Michael Kremer</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>943</th>\n",
-       "      <td>Physiology or Medicine</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=985'>json</a></td>\n",
-       "      <td>Harvey J. Alter</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q5677307'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/985'>html</a></td>\n",
        "      <td>2020</td>\n",
+       "      <td>Physiology or Medicine</td>\n",
+       "      <td>Harvey J. Alter</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>944</th>\n",
-       "      <td>Physiology or Medicine</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=986'>json</a></td>\n",
-       "      <td>Michael Houghton</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q1927895'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/986'>html</a></td>\n",
        "      <td>2020</td>\n",
+       "      <td>Physiology or Medicine</td>\n",
+       "      <td>Michael Houghton</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>945</th>\n",
-       "      <td>Physiology or Medicine</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=987'>json</a></td>\n",
-       "      <td>Charles M. Rice</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q22669757'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/987'>html</a></td>\n",
        "      <td>2020</td>\n",
+       "      <td>Physiology or Medicine</td>\n",
+       "      <td>Charles M. Rice</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>946</th>\n",
-       "      <td>Physics</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=988'>json</a></td>\n",
-       "      <td>Roger Penrose</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q193803'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/988'>html</a></td>\n",
        "      <td>2020</td>\n",
+       "      <td>Physics</td>\n",
+       "      <td>Roger Penrose</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>947</th>\n",
-       "      <td>Physics</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=989'>json</a></td>\n",
-       "      <td>Reinhard Genzel</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q65807'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/989'>html</a></td>\n",
        "      <td>2020</td>\n",
+       "      <td>Physics</td>\n",
+       "      <td>Reinhard Genzel</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>948</th>\n",
-       "      <td>Physics</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=990'>json</a></td>\n",
-       "      <td>Andrea Ghez</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q493956'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/990'>html</a></td>\n",
        "      <td>2020</td>\n",
+       "      <td>Physics</td>\n",
+       "      <td>Andrea Ghez</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>949</th>\n",
-       "      <td>Chemistry</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>json</a></td>\n",
-       "      <td>Emmanuelle Charpentier</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q17280087'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
        "      <td>2020</td>\n",
+       "      <td>Chemistry</td>\n",
+       "      <td>Emmanuelle Charpentier</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>950</th>\n",
-       "      <td>Chemistry</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>json</a></td>\n",
-       "      <td>Jennifer A. Doudna</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q56068'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
        "      <td>2020</td>\n",
+       "      <td>Chemistry</td>\n",
+       "      <td>Jennifer A. Doudna</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>951</th>\n",
-       "      <td>Literature</td>\n",
        "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=993'>json</a></td>\n",
-       "      <td>Louise Glück</td>\n",
        "      <td><a href='http://www.wikidata.org/entity/Q2344210'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/993'>html</a></td>\n",
        "      <td>2020</td>\n",
+       "      <td>Literature</td>\n",
+       "      <td>Louise Glück</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -1134,22 +1134,23 @@
     "* 951\tLouise Glück - missing html\n",
     "\n",
     "Templates supporting Wikidata Property 8024 = Wikidata [Q91652187](https://www.wikidata.org/wiki/Q91652187)\n",
-    "* sv:Wikipedia [Mall:Nobelprize](https://sv.wikipedia.org/wiki/Mall:Nobelprize)\n",
-    "* en:Wikipedia [Template:Nobelprize](https://en.wikipedia.org/wiki/Template:Nobelprize)\n",
-    "* ar:Wikipedia قالب:جائزة_نوبل\n",
+    "* ar:Wikipedia [قالب:جائزة_نوبل](https://ar.wikipedia.org/wiki/%D9%82%D8%A7%D9%84%D8%A8:%D8%AC%D8%A7%D8%A6%D8%B2%D8%A9_%D9%86%D9%88%D8%A8%D9%84)\n",
     "* ca:wikipedia [Plantilla:Nobelprize](https://ca.wikipedia.org/wiki/Plantilla:Nobelprize)\n",
+    "* en:Wikipedia [Template:Nobelprize](https://en.wikipedia.org/wiki/Template:Nobelprize)\n",
     "* ka:wikipedia [თარგი:Nobelprize](https://ka.wikipedia.org/wiki/%E1%83%97%E1%83%90%E1%83%A0%E1%83%92%E1%83%98:Nobelprize)\n",
     "* nn:Wikipedia [Mal:Nobelprize](https://nn.wikipedia.org/wiki/Mal:Nobelprize)\n",
     "* pt:Wikipedia [Predefinição:Prémio Nobel](https://pt.wikipedia.org/wiki/Predefini%C3%A7%C3%A3o:Pr%C3%A9mio_Nobel)\n",
+    "* sv:Wikipedia [Mall:Nobelprize](https://sv.wikipedia.org/wiki/Mall:Nobelprize)\n",
     "* sr:WIkipedia [Шаблон:Nobelprize](https://sr.wikipedia.org/wiki/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD:Nobelprize)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next announcement\n",
+    "see https://www.nobelprize.org/"
+   ]
   },
   {
    "cell_type": "code",
