--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-09 00:02:31.271201\n"
+      "Last run:  2020-10-09 10:44:51.564143\n"
      ]
     }
    ],
@@ -827,6 +827,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Check that Wikidata and api.nobelprize.org is in synch"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -966,7 +973,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End run:  2020-10-09 00:02:34.074029\n"
+      "End run:  2020-10-09 10:44:54.555831\n"
      ]
     }
    ],
@@ -983,12 +990,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed (hh:mm:ss.ms) 0:00:02.807594\n"
+      "Time elapsed (hh:mm:ss.ms) 0:00:03.001250\n"
      ]
     }
    ],
    "source": [
     "print('Time elapsed (hh:mm:ss.ms) {}'.format(datetime.now() - start_time))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Lesson learned\n",
+    "Its a delay when the html page is linked after the announcement --> we do this list below to check when its ready and we can add it to Wikidata\n"
    ]
   },
   {
@@ -1003,104 +1018,104 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>linkjson</th>\n",
-       "      <th>wd</th>\n",
-       "      <th>linkhtml</th>\n",
        "      <th>awardYear</th>\n",
        "      <th>category</th>\n",
        "      <th>name_en</th>\n",
+       "      <th>linkjson</th>\n",
+       "      <th>wd</th>\n",
+       "      <th>linkhtml</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>942</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=984'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q1635006'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/984'>html</a></td>\n",
        "      <td>2019</td>\n",
        "      <td>Economic Sciences</td>\n",
        "      <td>Michael Kremer</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=984'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q1635006'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/984'>html</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>943</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=985'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5677307'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/985'>html</a></td>\n",
        "      <td>2020</td>\n",
        "      <td>Physiology or Medicine</td>\n",
        "      <td>Harvey J. Alter</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=985'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5677307'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/985'>html</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>944</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=986'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q1927895'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/986'>html</a></td>\n",
        "      <td>2020</td>\n",
        "      <td>Physiology or Medicine</td>\n",
        "      <td>Michael Houghton</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=986'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q1927895'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/986'>html</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>945</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=987'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q22669757'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/987'>html</a></td>\n",
        "      <td>2020</td>\n",
        "      <td>Physiology or Medicine</td>\n",
        "      <td>Charles M. Rice</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=987'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q22669757'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/987'>html</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>946</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=988'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q193803'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/988'>html</a></td>\n",
        "      <td>2020</td>\n",
        "      <td>Physics</td>\n",
        "      <td>Roger Penrose</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=988'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q193803'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/988'>html</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>947</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=989'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q65807'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/989'>html</a></td>\n",
        "      <td>2020</td>\n",
        "      <td>Physics</td>\n",
        "      <td>Reinhard Genzel</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=989'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q65807'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/989'>html</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>948</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=990'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q493956'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/990'>html</a></td>\n",
        "      <td>2020</td>\n",
        "      <td>Physics</td>\n",
        "      <td>Andrea Ghez</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=990'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q493956'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/990'>html</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>949</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q17280087'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
        "      <td>2020</td>\n",
        "      <td>Chemistry</td>\n",
        "      <td>Emmanuelle Charpentier</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q17280087'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>950</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q56068'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
        "      <td>2020</td>\n",
        "      <td>Chemistry</td>\n",
        "      <td>Jennifer A. Doudna</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q56068'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>951</th>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=993'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q2344210'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/993'>html</a></td>\n",
        "      <td>2020</td>\n",
        "      <td>Literature</td>\n",
        "      <td>Louise Glück</td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=993'>json</a></td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q2344210'>Wikidata</a></td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/993'>html</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -1137,11 +1152,26 @@
     "* ar:Wikipedia [قالب:جائزة_نوبل](https://ar.wikipedia.org/wiki/%D9%82%D8%A7%D9%84%D8%A8:%D8%AC%D8%A7%D8%A6%D8%B2%D8%A9_%D9%86%D9%88%D8%A8%D9%84)\n",
     "* ca:wikipedia [Plantilla:Nobelprize](https://ca.wikipedia.org/wiki/Plantilla:Nobelprize)\n",
     "* en:Wikipedia [Template:Nobelprize](https://en.wikipedia.org/wiki/Template:Nobelprize)\n",
-    "* ka:wikipedia [თარგი:Nobelprize](https://ka.wikipedia.org/wiki/%E1%83%97%E1%83%90%E1%83%A0%E1%83%92%E1%83%98:Nobelprize)\n",
+    "* ka:Wikipedia [თარგი:Nobelprize](https://ka.wikipedia.org/wiki/%E1%83%97%E1%83%90%E1%83%A0%E1%83%92%E1%83%98:Nobelprize)\n",
     "* nn:Wikipedia [Mal:Nobelprize](https://nn.wikipedia.org/wiki/Mal:Nobelprize)\n",
     "* pt:Wikipedia [Predefinição:Prémio Nobel](https://pt.wikipedia.org/wiki/Predefini%C3%A7%C3%A3o:Pr%C3%A9mio_Nobel)\n",
     "* sv:Wikipedia [Mall:Nobelprize](https://sv.wikipedia.org/wiki/Mall:Nobelprize)\n",
     "* sr:WIkipedia [Шаблон:Nobelprize](https://sr.wikipedia.org/wiki/%D0%A8%D0%B0%D0%B1%D0%BB%D0%BE%D0%BD:Nobelprize)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Articles using template\n",
+    "  * ar:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573153) / not using\n",
+    "  * ca:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)\n",
+    "  * en:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573140) / not using\n",
+    "  * ka:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)\n",
+    "  * nn:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573155) / not using\n",
+    "  * pt:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573158) / not using\n",
+    "  * sv:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573129) / not using\n",
+    "  * sr:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)"
    ]
   },
   {
