--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Litteraturbanken Author \n",
-    "version 1.16 \n",
+    "version 1.17 -  added link json \n",
     "\n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)\n",
     "* [T238932 API Litteraturbanken]([https://phabricator.wikimedia.org/T238932)\n",
@@ -13,7 +13,7 @@
     "  * GITHUB [spraakbanken/littb-frontend](https://github.com/spraakbanken/littb-frontend)\n",
     "      * Open question \n",
     "        * how to see [JSON for a record 23](https://github.com/spraakbanken/littb-frontend/issues/23)\n",
-    "        * [feedback data 24](https://github.com/spraakbanken/littb-frontend/issues/24)\n",
+    "        * ~~[feedback data 24](https://github.com/spraakbanken/littb-frontend/issues/24)~~\n",
     "  * API [get_authors](https://litteraturbanken.se/api/get_authors)\n",
     "  * [url_list](https://litteraturbanken.se/api/url_list)\n",
     "  * [API List all 0-10 include](https://litteraturbanken.se/api/list_all/etext,faksimil,pdf?from=0&to=10&include=authors,forfattare,lbworkid,titlepath,title,librisid,mediatype,main_author.author_id)\n",
@@ -21,6 +21,7 @@
     "  * Wikidata \n",
     "    * property [P5101](https://www.wikidata.org/wiki/Property:P5101)\n",
     "    * [other properties](https://w.wiki/eck) on the same object as Litterturbanken Author\n",
+    "* [Wikidata properties also available](https://w.wiki/eck) when we have P5101\n",
     "\n",
     "**The objective** \n",
     "1. Find all Litteraturbanken Author objects that has Show True\n",
@@ -91,7 +92,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-09 10:45:40.767255\n"
+      "Last run:  2020-10-09 11:04:08.161658\n"
      ]
     }
    ],
@@ -1971,59 +1972,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>WikidataID</th>\n",
        "      <th>authorid_y</th>\n",
        "      <th>authorid_x</th>\n",
        "      <th>show_y</th>\n",
-       "      <th>WikidataID</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>Q100151904</td>\n",
        "      <td>BjerkénCG</td>\n",
        "      <td>BjerkenCG</td>\n",
        "      <td>True</td>\n",
-       "      <td>Q100151904</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
+       "      <td>Q100153203</td>\n",
        "      <td>BrändströmKA</td>\n",
        "      <td>BrandstromKA</td>\n",
        "      <td>True</td>\n",
-       "      <td>Q100153203</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
+       "      <td>Q99771903</td>\n",
        "      <td>DahlénT</td>\n",
        "      <td>DahlenT</td>\n",
        "      <td>True</td>\n",
-       "      <td>Q99771903</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
+       "      <td>Q99871759</td>\n",
        "      <td>FjørtoftK</td>\n",
        "      <td>FjortoftK</td>\n",
        "      <td>True</td>\n",
-       "      <td>Q99871759</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
+       "      <td>Q99872638</td>\n",
        "      <td>ForsåsScottH</td>\n",
        "      <td>ForsasScottH</td>\n",
        "      <td>True</td>\n",
-       "      <td>Q99872638</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     authorid_y    authorid_x  show_y  WikidataID\n",
-       "0     BjerkénCG     BjerkenCG    True  Q100151904\n",
-       "1  BrändströmKA  BrandstromKA    True  Q100153203\n",
-       "2       DahlénT       DahlenT    True   Q99771903\n",
-       "3     FjørtoftK     FjortoftK    True   Q99871759\n",
-       "4  ForsåsScottH  ForsasScottH    True   Q99872638"
+       "   WikidataID    authorid_y    authorid_x  show_y\n",
+       "0  Q100151904     BjerkénCG     BjerkenCG    True\n",
+       "1  Q100153203  BrändströmKA  BrandstromKA    True\n",
+       "2   Q99771903       DahlénT       DahlenT    True\n",
+       "3   Q99871759     FjørtoftK     FjortoftK    True\n",
+       "4   Q99872638  ForsåsScottH  ForsasScottH    True"
       ]
      },
      "execution_count": 33,
@@ -2048,95 +2049,95 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>authorid</th>\n",
-       "      <th>Littbank</th>\n",
        "      <th>WikidataID</th>\n",
+       "      <th>Littbank</th>\n",
+       "      <th>authorid</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>191</th>\n",
-       "      <td>BirchPfeifferC</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BirchPfeifferC'>link</a></td>\n",
        "      <td>Q68117</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BirchPfeifferC'>link</a></td>\n",
+       "      <td>BirchPfeifferC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>197</th>\n",
-       "      <td>BjerkenCG</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjerkenCG'>link</a></td>\n",
        "      <td>Q100151904</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjerkenCG'>link</a></td>\n",
+       "      <td>BjerkenCG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>207</th>\n",
-       "      <td>BjörkmanE</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjörkmanE'>link</a></td>\n",
        "      <td>Q11859217</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjörkmanE'>link</a></td>\n",
+       "      <td>BjörkmanE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>253</th>\n",
-       "      <td>BrandstromKA</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BrandstromKA'>link</a></td>\n",
        "      <td>Q100153203</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BrandstromKA'>link</a></td>\n",
+       "      <td>BrandstromKA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>300</th>\n",
-       "      <td>ButenschönA</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ButenschönA'>link</a></td>\n",
        "      <td>Q14932468</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ButenschönA'>link</a></td>\n",
+       "      <td>ButenschönA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>387</th>\n",
-       "      <td>DahlenT</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/DahlenT'>link</a></td>\n",
        "      <td>Q99771903</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/DahlenT'>link</a></td>\n",
+       "      <td>DahlenT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>529</th>\n",
-       "      <td>FjortoftK</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/FjortoftK'>link</a></td>\n",
        "      <td>Q99871759</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/FjortoftK'>link</a></td>\n",
+       "      <td>FjortoftK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>541</th>\n",
-       "      <td>ForsasScottH</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ForsasScottH'>link</a></td>\n",
        "      <td>Q99872638</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ForsasScottH'>link</a></td>\n",
+       "      <td>ForsasScottH</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>759</th>\n",
-       "      <td>HornströmM</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/HornströmM'>link</a></td>\n",
        "      <td>Q99751230</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/HornströmM'>link</a></td>\n",
+       "      <td>HornströmM</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1296</th>\n",
-       "      <td>RomanusAlfvénAC</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/RomanusAlfvénAC'>link</a></td>\n",
        "      <td>Q16946439</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/RomanusAlfvénAC'>link</a></td>\n",
+       "      <td>RomanusAlfvénAC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1411</th>\n",
-       "      <td>SjödinS</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/SjödinS'>link</a></td>\n",
        "      <td>Q3527629</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/SjödinS'>link</a></td>\n",
+       "      <td>SjödinS</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1549</th>\n",
-       "      <td>TirénG</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/TirénG'>link</a></td>\n",
        "      <td>Q4458078</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/TirénG'>link</a></td>\n",
+       "      <td>TirénG</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1597</th>\n",
-       "      <td>WahlinK</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/WahlinK'>link</a></td>\n",
        "      <td>Q1708942</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/WahlinK'>link</a></td>\n",
+       "      <td>WahlinK</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1697</th>\n",
-       "      <td>ÅströmP</td>\n",
-       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ÅströmP'>link</a></td>\n",
        "      <td>Q2063496</td>\n",
+       "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ÅströmP'>link</a></td>\n",
+       "      <td>ÅströmP</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -2528,7 +2529,7 @@
     "  * undran hur ser jag det i datat\n",
     "  \n",
     "Skapar en task på GITHUB         \n",
-    "* [feedback data 24](https://github.com/spraakbanken/littb-frontend/issues/24)\n"
+    "* ~~[feedback data 24](https://github.com/spraakbanken/littb-frontend/issues/24)~~\n"
    ]
   },
   {
@@ -3053,6 +3054,7 @@
        "      <th>librisid</th>\n",
        "      <th>_merge</th>\n",
        "      <th>Littbank</th>\n",
+       "      <th>LittbankJSON</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3068,6 +3070,7 @@
        "      <td>NaN</td>\n",
        "      <td>both</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BirchPfeifferC'>link Litteraturbanken</a></td>\n",
+       "      <td><a href='https://litteraturbanken.se/api/get_author/BirchPfeifferC'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>207</th>\n",
@@ -3081,6 +3084,7 @@
        "      <td>NaN</td>\n",
        "      <td>both</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/BjörkmanE'>link Litteraturbanken</a></td>\n",
+       "      <td><a href='https://litteraturbanken.se/api/get_author/BjörkmanE'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>300</th>\n",
@@ -3094,6 +3098,7 @@
        "      <td>NaN</td>\n",
        "      <td>both</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ButenschönA'>link Litteraturbanken</a></td>\n",
+       "      <td><a href='https://litteraturbanken.se/api/get_author/ButenschönA'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1296</th>\n",
@@ -3107,6 +3112,7 @@
        "      <td>NaN</td>\n",
        "      <td>both</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/RomanusAlfvénAC'>link Litteraturbanken</a></td>\n",
+       "      <td><a href='https://litteraturbanken.se/api/get_author/RomanusAlfvénAC'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1411</th>\n",
@@ -3120,6 +3126,7 @@
        "      <td>1zcfhwvk50wff8f</td>\n",
        "      <td>both</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/SjödinS'>link Litteraturbanken</a></td>\n",
+       "      <td><a href='https://litteraturbanken.se/api/get_author/SjödinS'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1549</th>\n",
@@ -3133,6 +3140,7 @@
        "      <td>31fhj5wm4rnx095</td>\n",
        "      <td>both</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/TirénG'>link Litteraturbanken</a></td>\n",
+       "      <td><a href='https://litteraturbanken.se/api/get_author/TirénG'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1697</th>\n",
@@ -3146,6 +3154,7 @@
        "      <td>NaN</td>\n",
        "      <td>both</td>\n",
        "      <td><a href='https://litteraturbanken.se/f%C3%B6rfattare/ÅströmP'>link Litteraturbanken</a></td>\n",
+       "      <td><a href='https://litteraturbanken.se/api/get_author/ÅströmP'>json</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
@@ -3162,6 +3171,7 @@
    "source": [
     "dfmergeDeleteBoth = dfmergeDelete[dfmergeDelete[\"_merge\"]==\"both\"].copy()  \n",
     "dfmergeDeleteBoth[\"Littbank\"] = \"<a href='https://litteraturbanken.se/f%C3%B6rfattare/\" + dfmergeDeleteBoth[\"authorid\"] + \"'>link Litteraturbanken</a>\"\n",
+    "dfmergeDeleteBoth[\"LittbankJSON\"] = \"<a href='https://litteraturbanken.se/api/get_author/\" + dfmergeDeleteBoth[\"authorid\"] + \"'>json</a>\"\n",
     "HTML(dfmergeDeleteBoth.to_html(escape=False))\n",
     "# list ok but has Show False\n",
     "# BirchPfeifferC BjörkmanE ButenschönA RomanusAlfvénAC SjödinS TirénG ÅströmP"
@@ -3178,7 +3188,7 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Int64Index: 7 entries, 191 to 1697\n",
-      "Data columns (total 10 columns):\n",
+      "Data columns (total 11 columns):\n",
       " #   Column                   Non-Null Count  Dtype         \n",
       "---  ------                   --------------  -----         \n",
       " 0   WikidataID               7 non-null      object        \n",
@@ -3191,8 +3201,9 @@
       " 7   librisid                 2 non-null      object        \n",
       " 8   _merge                   7 non-null      category      \n",
       " 9   Littbank                 7 non-null      object        \n",
-      "dtypes: category(1), datetime64[ns](2), object(7)\n",
-      "memory usage: 671.0+ bytes\n"
+      " 10  LittbankJSON             7 non-null      object        \n",
+      "dtypes: category(1), datetime64[ns](2), object(8)\n",
+      "memory usage: 727.0+ bytes\n"
      ]
     }
    ],
@@ -3209,8 +3220,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ended:  2020-10-09 10:45:47.554698\n",
-      "Time elapsed (hh:mm:ss.ms) 0:00:06.787888\n"
+      "Ended:  2020-10-09 11:04:12.531091\n",
+      "Time elapsed (hh:mm:ss.ms) 0:00:04.370301\n"
      ]
     }
    ],
