--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -11,8 +11,8 @@
     "* [T238932 API Litteraturbanken]([https://phabricator.wikimedia.org/T238932)\n",
     "  * good API documention has not been found\n",
     "  * GITHUB [spraakbanken/littb-frontend](https://github.com/spraakbanken/littb-frontend)\n",
-    "      * Open question \n",
-    "        * how to see [JSON for a record 23](https://github.com/spraakbanken/littb-frontend/issues/23)\n",
+    "      * Question \n",
+    "        * ~~how to see [JSON for a record 23](https://github.com/spraakbanken/littb-frontend/issues/23)~~\n",
     "        * ~~[feedback data 24](https://github.com/spraakbanken/littb-frontend/issues/24)~~\n",
     "  * API [get_authors](https://litteraturbanken.se/api/get_authors)\n",
     "  * [url_list](https://litteraturbanken.se/api/url_list)\n",
