--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -22,7 +22,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last run:  2020-10-09 10:44:51.564143\n"
+      "Last run:  2020-10-09 12:24:55.005143\n"
      ]
     }
    ],
@@ -59,30 +59,30 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 952 entries, 0 to 951\n",
+      "RangeIndex: 953 entries, 0 to 952\n",
       "Data columns (total 18 columns):\n",
       " #   Column           Non-Null Count  Dtype \n",
       "---  ------           --------------  ----- \n",
-      " 0   id               952 non-null    object\n",
+      " 0   id               953 non-null    object\n",
       " 1   knownName        928 non-null    object\n",
       " 2   givenName        928 non-null    object\n",
       " 3   familyName       926 non-null    object\n",
       " 4   fullName         928 non-null    object\n",
       " 5   gender           928 non-null    object\n",
       " 6   birth            927 non-null    object\n",
-      " 7   links            952 non-null    object\n",
-      " 8   nobelPrizes      952 non-null    object\n",
-      " 9   death            628 non-null    object\n",
-      " 10  orgName          24 non-null     object\n",
+      " 7   links            953 non-null    object\n",
+      " 8   nobelPrizes      953 non-null    object\n",
+      " 9   death            629 non-null    object\n",
+      " 10  orgName          25 non-null     object\n",
       " 11  nativeName       24 non-null     object\n",
-      " 12  acronym          10 non-null     object\n",
+      " 12  acronym          11 non-null     object\n",
       " 13  founded          23 non-null     object\n",
       " 14  penName          11 non-null     object\n",
       " 15  birthCountry     1 non-null      object\n",
       " 16  birthCountryNow  1 non-null      object\n",
       " 17  birthContinent   1 non-null      object\n",
       "dtypes: object(18)\n",
-      "memory usage: 134.0+ KB\n"
+      "memory usage: 134.1+ KB\n"
      ]
     }
    ],
@@ -137,27 +137,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>602</th>\n",
-       "      <td>984</td>\n",
-       "      <td>{'en': 'Michael Kremer', 'se': 'Michael Kremer'}</td>\n",
-       "      <td>{'en': 'Michael', 'se': 'Michael'}</td>\n",
-       "      <td>{'en': 'Kremer', 'se': 'Kremer'}</td>\n",
-       "      <td>{'en': 'Michael Kremer', 'se': 'Michael Kremer'}</td>\n",
-       "      <td>male</td>\n",
-       "      <td>{'date': '1964-11-12', 'place': {'city': {'en'...</td>\n",
-       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
-       "      <td>[{'awardYear': '2019', 'category': {'en': 'Eco...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>352</th>\n",
        "      <td>985</td>\n",
@@ -347,13 +326,33 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>944</th>\n",
+       "      <td>994</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'rel': 'laureate', 'href': 'http://masterdata...</td>\n",
+       "      <td>[{'awardYear': '2020', 'category': {'en': 'Pea...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>{'en': 'World Food Programme', 'no': 'Verdens ...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>WFP</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "      id  ...    birthContinent\n",
-       "602  984  ...               NaN\n",
        "352  985  ...               NaN\n",
        "601  986  ...  {'en': 'Europe'}\n",
        "132  987  ...               NaN\n",
@@ -363,6 +362,7 @@
        "216  991  ...               NaN\n",
        "448  992  ...               NaN\n",
        "559  993  ...               NaN\n",
+       "944  994  ...               NaN\n",
        "\n",
        "[10 rows x 18 columns]"
       ]
@@ -398,17 +398,17 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 952 entries, 0 to 951\n",
+      "RangeIndex: 953 entries, 0 to 952\n",
       "Data columns (total 7 columns):\n",
       " #   Column     Non-Null Count  Dtype \n",
       "---  ------     --------------  ----- \n",
-      " 0   id         952 non-null    int64 \n",
+      " 0   id         953 non-null    int64 \n",
       " 1   name_en    928 non-null    object\n",
       " 2   name_se    928 non-null    object\n",
-      " 3   link       952 non-null    object\n",
+      " 3   link       953 non-null    object\n",
       " 4   gender     928 non-null    object\n",
-      " 5   awardYear  952 non-null    object\n",
-      " 6   category   952 non-null    object\n",
+      " 5   awardYear  953 non-null    object\n",
+      " 6   category   953 non-null    object\n",
       "dtypes: int64(1), object(6)\n",
       "memory usage: 52.2+ KB\n"
      ]
@@ -590,15 +590,15 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 952 entries, 0 to 951\n",
+      "RangeIndex: 953 entries, 0 to 952\n",
       "Data columns (total 3 columns):\n",
       " #   Column     Non-Null Count  Dtype \n",
       "---  ------     --------------  ----- \n",
-      " 0   item       952 non-null    object\n",
-      " 1   itemLabel  952 non-null    object\n",
-      " 2   NobelAPI   952 non-null    int64 \n",
+      " 0   item       953 non-null    object\n",
+      " 1   itemLabel  953 non-null    object\n",
+      " 2   NobelAPI   953 non-null    int64 \n",
       "dtypes: int64(1), object(2)\n",
-      "memory usage: 22.4+ KB\n"
+      "memory usage: 22.5+ KB\n"
      ]
     }
    ],
@@ -654,20 +654,6 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>942</th>\n",
-       "      <td>http://www.wikidata.org/entity/Q1635006</td>\n",
-       "      <td>Michael Kremer</td>\n",
-       "      <td>984</td>\n",
-       "      <td>984</td>\n",
-       "      <td>Michael Kremer</td>\n",
-       "      <td>Michael Kremer</td>\n",
-       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
-       "      <td>male</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>Economic Sciences</td>\n",
-       "      <td>both</td>\n",
-       "    </tr>\n",
        "    <tr>\n",
        "      <th>943</th>\n",
        "      <td>http://www.wikidata.org/entity/Q5677307</td>\n",
@@ -794,13 +780,26 @@
        "      <td>Literature</td>\n",
        "      <td>both</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>952</th>\n",
+       "      <td>http://www.wikidata.org/entity/Q204344</td>\n",
+       "      <td>World Food Programme</td>\n",
+       "      <td>994</td>\n",
+       "      <td>994</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>http://masterdataapi.nobelprize.org/2/laureate...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2020</td>\n",
+       "      <td>Peace</td>\n",
+       "      <td>both</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                                         item  ... WD_Nobel\n",
-       "942   http://www.wikidata.org/entity/Q1635006  ...     both\n",
        "943   http://www.wikidata.org/entity/Q5677307  ...     both\n",
        "944   http://www.wikidata.org/entity/Q1927895  ...     both\n",
        "945  http://www.wikidata.org/entity/Q22669757  ...     both\n",
@@ -810,6 +809,7 @@
        "949  http://www.wikidata.org/entity/Q17280087  ...     both\n",
        "950     http://www.wikidata.org/entity/Q56068  ...     both\n",
        "951   http://www.wikidata.org/entity/Q2344210  ...     both\n",
+       "952    http://www.wikidata.org/entity/Q204344  ...     both\n",
        "\n",
        "[10 rows x 11 columns]"
       ]
@@ -841,7 +841,7 @@
     {
      "data": {
       "text/plain": [
-       "both    952\n",
+       "both    953\n",
        "Name: WD_Nobel, dtype: int64"
       ]
      },
@@ -973,7 +973,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "End run:  2020-10-09 10:44:54.555831\n"
+      "End run:  2020-10-09 12:24:57.545638\n"
      ]
     }
    ],
@@ -990,7 +990,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed (hh:mm:ss.ms) 0:00:03.001250\n"
+      "Time elapsed (hh:mm:ss.ms) 0:00:02.549286\n"
      ]
     }
    ],
@@ -1020,102 +1020,102 @@
        "      <th></th>\n",
        "      <th>awardYear</th>\n",
        "      <th>category</th>\n",
-       "      <th>name_en</th>\n",
-       "      <th>linkjson</th>\n",
-       "      <th>wd</th>\n",
        "      <th>linkhtml</th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>wd</th>\n",
+       "      <th>linkjson</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>942</th>\n",
-       "      <td>2019</td>\n",
-       "      <td>Economic Sciences</td>\n",
-       "      <td>Michael Kremer</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=984'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q1635006'>Wikidata</a></td>\n",
-       "      <td><a href='https://www.nobelprize.org/laureate/984'>html</a></td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>943</th>\n",
        "      <td>2020</td>\n",
        "      <td>Physiology or Medicine</td>\n",
-       "      <td>Harvey J. Alter</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=985'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q5677307'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/985'>html</a></td>\n",
+       "      <td>Harvey J. Alter</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q5677307'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=985'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>944</th>\n",
        "      <td>2020</td>\n",
        "      <td>Physiology or Medicine</td>\n",
-       "      <td>Michael Houghton</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=986'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q1927895'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/986'>html</a></td>\n",
+       "      <td>Michael Houghton</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q1927895'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=986'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>945</th>\n",
        "      <td>2020</td>\n",
        "      <td>Physiology or Medicine</td>\n",
-       "      <td>Charles M. Rice</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=987'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q22669757'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/987'>html</a></td>\n",
+       "      <td>Charles M. Rice</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q22669757'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=987'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>946</th>\n",
        "      <td>2020</td>\n",
        "      <td>Physics</td>\n",
-       "      <td>Roger Penrose</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=988'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q193803'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/988'>html</a></td>\n",
+       "      <td>Roger Penrose</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q193803'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=988'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>947</th>\n",
        "      <td>2020</td>\n",
        "      <td>Physics</td>\n",
-       "      <td>Reinhard Genzel</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=989'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q65807'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/989'>html</a></td>\n",
+       "      <td>Reinhard Genzel</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q65807'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=989'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>948</th>\n",
        "      <td>2020</td>\n",
        "      <td>Physics</td>\n",
-       "      <td>Andrea Ghez</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=990'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q493956'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/990'>html</a></td>\n",
+       "      <td>Andrea Ghez</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q493956'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=990'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>949</th>\n",
        "      <td>2020</td>\n",
        "      <td>Chemistry</td>\n",
-       "      <td>Emmanuelle Charpentier</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q17280087'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/991'>html</a></td>\n",
+       "      <td>Emmanuelle Charpentier</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q17280087'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=991'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>950</th>\n",
        "      <td>2020</td>\n",
        "      <td>Chemistry</td>\n",
-       "      <td>Jennifer A. Doudna</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q56068'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/992'>html</a></td>\n",
+       "      <td>Jennifer A. Doudna</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q56068'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=992'>json</a></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>951</th>\n",
        "      <td>2020</td>\n",
        "      <td>Literature</td>\n",
-       "      <td>Louise Glück</td>\n",
-       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=993'>json</a></td>\n",
-       "      <td><a href='http://www.wikidata.org/entity/Q2344210'>Wikidata</a></td>\n",
        "      <td><a href='https://www.nobelprize.org/laureate/993'>html</a></td>\n",
+       "      <td>Louise Glück</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q2344210'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=993'>json</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>952</th>\n",
+       "      <td>2020</td>\n",
+       "      <td>Peace</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/994'>html</a></td>\n",
+       "      <td>NaN</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q204344'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=994'>json</a></td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>"
