--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -1143,10 +1143,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Status 20201008 :\n",
-    "* 945   Charles M. Rice - missing html\n",
-    "* 950\tJennifer A. Doudna - missing html\n",
-    "* 951\tLouise Glück - missing html\n",
+    "Status 20201009 :\n",
+    "* Ok all has html pages\n",
     "\n",
     "Templates supporting Wikidata Property 8024 = Wikidata [Q91652187](https://www.wikidata.org/wiki/Q91652187)\n",
     "* ar:Wikipedia [قالب:جائزة_نوبل](https://ar.wikipedia.org/wiki/%D9%82%D8%A7%D9%84%D8%A8:%D8%AC%D8%A7%D8%A6%D8%B2%D8%A9_%D9%86%D9%88%D8%A8%D9%84)\n",
@@ -1163,14 +1161,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Articles using template\n",
-    "  * ar:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573153) / not using\n",
+    "* Articles using template and view statistics this year\n",
+    "  * ar:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573153) / not using [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://ar.wikipedia.org/wiki/%25D8%25AA%25D8%25B5%25D9%2586%25D9%258A%25D9%2581:%25D9%2582%25D8%25A7%25D9%2584%25D8%25A8_%25D8%25AC%25D8%25A7%25D8%25A6%25D8%25B2%25D8%25A9_%25D9%2586%25D9%2588%25D8%25A8%25D9%2584_%25D9%258A%25D8%25B3%25D8%25AA%25D8%25B9%25D9%2585%25D9%2584_%25D8%25AE%25D8%25A7%25D8%25B5%25D8%25A9_%25D9%2588%25D9%258A%25D9%2583%25D9%258A_%25D8%25A8%25D9%258A%25D8%25A7%25D9%2586%25D8%25A7%25D8%25AA_P8024)\n",
     "  * ca:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)\n",
-    "  * en:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573140) / not using\n",
+    "  * en:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573140) / not using - [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://en.wikipedia.org/wiki/Category:Nobelprize_template_using_Wikidata_property_P8024)\n",
     "  * ka:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)\n",
-    "  * nn:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573155) / not using\n",
-    "  * pt:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573158) / not using\n",
-    "  * sv:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573129) / not using\n",
+    "  * nn:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573155) / not using - [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://nn.wikipedia.org/wiki/Kategori:Sider_som_nyttar_Mal:Nobelprize)\n",
+    "  * pt:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573158) / not using - [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://pt.wikipedia.org/wiki/Categoria:Predefini%25C3%25A7%25C3%25A3o_sobre_pr%25C3%25A9mios_Nobel_que_usam_a_propriedade_do_Wikidata_P8024)\n",
+    "  * sv:Wikipedia [using](https://petscan.wmflabs.org/?psid=17573129) / not using - [statistics](https://pageviews.toolforge.org/massviews/?platform=all-access&agent=user&source=category&range=this-year&subjectpage=0&subcategories=0&sort=views&direction=1&view=list&target=https://sv.wikipedia.org/wiki/Kategori:Sidor_som_anv%25C3%25A4nder_Mall:Nobelprize)\n",
     "  * sr:Wikipedia miss track category [Q91672712](https://www.wikidata.org/wiki/Q91672712#sitelinks-wikipedia)"
    ]
   },
