--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1027,6 +1027,51 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>938</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Literature</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/980'>html</a></td>\n",
+       "      <td>Peter Handke</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q44107'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=980'>json</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>939</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Peace</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/981'>html</a></td>\n",
+       "      <td>Abiy Ahmed Ali</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q50365049'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=981'>json</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>940</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Economic Sciences</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/982'>html</a></td>\n",
+       "      <td>Abhijit Banerjee</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q320578'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=982'>json</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>941</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Economic Sciences</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/983'>html</a></td>\n",
+       "      <td>Esther Duflo</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q434509'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=983'>json</a></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>942</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Economic Sciences</td>\n",
+       "      <td><a href='https://www.nobelprize.org/laureate/984'>html</a></td>\n",
+       "      <td>Michael Kremer</td>\n",
+       "      <td><a href='http://www.wikidata.org/entity/Q1635006'>Wikidata</a></td>\n",
+       "      <td><a href='https://api.nobelprize.org/v1/laureate.json?id=984'>json</a></td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>943</th>\n",
        "      <td>2020</td>\n",
@@ -1124,7 +1169,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1136,7 +1181,7 @@
     "dfmerge[\"wd\"] = \"<a href='\" + dfmerge[\"item\"].astype(str) + \"'>Wikidata</a>\"\n",
     "\n",
     "pd.set_option(\"display.max.columns\", None) \n",
-    "HTML(dfmerge[{'wd','name_en','awardYear','category','linkjson','linkhtml'}].tail(10).to_html(escape=False))"
+    "HTML(dfmerge[{'wd','name_en','awardYear','category','linkjson','linkhtml'}].tail(15).to_html(escape=False))"
    ]
   },
   {
