--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -8,6 +8,14 @@
     "version 1.17 -  added link json \n",
     "\n",
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)\n",
+    "\n",
+    "#### Other sources we sync\n",
+    "* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20API.ipynb)\n",
+    "* [Nobelprize.org](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)\n",
+    "* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)\n",
+    "* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  \n",
+    "\n",
+    "#### Misc\n",
     "* [T238932 API Litteraturbanken]([https://phabricator.wikimedia.org/T238932)\n",
     "  * good API documention has not been found\n",
     "  * GITHUB [spraakbanken/littb-frontend](https://github.com/spraakbanken/littb-frontend)\n",
