--- a/Nobel API.ipynb
+++ b/Nobel API.ipynb
@@ -8,9 +8,15 @@
     "version. 0.2 changed api call and added **Vrandečić EWS**\n",
     "* This [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)  \n",
     "\n",
-    "  * WIkidata property [Property:P8024](https://www.wikidata.org/wiki/Property:P8024)\n",
+    "  * Wikidata property [Property:P8024](https://www.wikidata.org/wiki/Property:P8024)\n",
     "  * [Developer xone nobelprize.org](https://www.nobelprize.org/about/developer-zone-2/)\n",
-    "      * maybe better API is [api.nobelprize.org/2.0/laureates](https://api.nobelprize.org/2.0/laureates)"
+    "      * maybe better API is [api.nobelprize.org/2.0/laureates](https://api.nobelprize.org/2.0/laureates)\n",
+    "      \n",
+    "#### Other sources we sync\n",
+    "* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20API.ipynb)\n",
+    "* [Nobelprize.org](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)\n",
+    "* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)\n",
+    "* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)"
    ]
   },
   {
