--- a/SBL.ipynb
+++ b/SBL.ipynb
@@ -11,6 +11,13 @@
     "* SBL personartiklar som saknar [sv:Wikipedia artikel](https://w.wiki/c5f) < 150\n",
     "* [SBL vs SKBL female articles](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  \n",
     "\n",
+    "#### Andra källor vi synkar\n",
+    "* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20API.ipynb)\n",
+    "* [Nobelprize.org](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)\n",
+    "* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)\n",
+    "* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  \n",
+    "\n",
+    "### SBL\n",
     "SBL har idag\n",
     "* personartiklar\n",
     "* släktartiklar\n",
@@ -975,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
@@ -1000,8 +1007,60 @@
     "plt.title(\"SBL articles published per Year about women 1918-2019\")\n",
     "plt.savefig('SBL_published_articles_women_1918-2018.png')  \n",
     "plt.show()  \n",
-    "#plotSBLYearPublished.info \n",
-    "#plotSBLYearFemailPublished"
+    "#plotSBLYearPublished.info \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 365,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2019    29\n",
+       "2011    19\n",
+       "2006    21\n",
+       "2002    19\n",
+       "2000    15\n",
+       "1997    23\n",
+       "1994    14\n",
+       "1991    20\n",
+       "1989    13\n",
+       "1987    32\n",
+       "1984    18\n",
+       "1981    21\n",
+       "1979    12\n",
+       "1977    26\n",
+       "1975    27\n",
+       "1973    12\n",
+       "1971    19\n",
+       "1969    15\n",
+       "1966    14\n",
+       "1956     9\n",
+       "1953     7\n",
+       "1950    13\n",
+       "1949    11\n",
+       "1945     9\n",
+       "1931    13\n",
+       "1929     6\n",
+       "1927    16\n",
+       "1926    16\n",
+       "1925    16\n",
+       "1924     5\n",
+       "1922     8\n",
+       "1920    12\n",
+       "1918    17\n",
+       "Name: YearPublished, dtype: int64"
+      ]
+     },
+     "execution_count": 365,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dfWD_SBL_female_article[\"YearPublished\"].dt.strftime(\"%Y\").value_counts().sort_index(ascending=False)"
    ]
   },
   {
