--- a/Litteraturbanken Author.ipynb
+++ b/Litteraturbanken Author.ipynb
@@ -10,10 +10,12 @@
     "* this [notebook](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)\n",
     "\n",
     "#### Other sources we sync\n",
+    "* [Kulturpersoner Uppsalakyrkogård](https://github.com/salgo60/open-data-examples/blob/master/Uppsalakyrkogård%20kulturpersoner.ipynb)\n",
     "* [Litteraturbanken](https://github.com/salgo60/open-data-examples/blob/master/Litteraturbanken%20Author.ipynb)\n",
     "* [Nobelprize.org](https://github.com/salgo60/open-data-examples/blob/master/Nobel%20API.ipynb)\n",
     "* [SBL](https://github.com/salgo60/open-data-examples/blob/master/SBL.ipynb)\n",
     "* [SKBL](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb)  \n",
+    "* [Svenska Akademin](https://github.com/salgo60/open-data-examples/blob/master/Svenska%20Akademin.ipynb)  \n",
     "\n",
     "#### Misc\n",
     "* [T238932 API Litteraturbanken]([https://phabricator.wikimedia.org/T238932)\n",
